Fix profile image gap and add image texture to it's place

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .App {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
