--- a/src/stylesheets/ButtonAndImageWrapper.css
+++ b/src/stylesheets/ButtonAndImageWrapper.css
@@ -11,4 +11,5 @@
 .button-image-wrapper--image {
  grid-column: span 2;
  height: 25vw;
+ width: 100%;
 }
