--- a/src/stylesheets/ProfilePicture.css
+++ b/src/stylesheets/ProfilePicture.css
@@ -4,4 +4,5 @@
 
 .profile-picture-image {
     width: 100%;
+    height: 100%;
 }
